--- a/examples/index.html
+++ b/examples/index.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-title: 'API Management Organizations'
+title: 'Example API Getting Started Pages'
 ---
 
-<h3>{{ site.title }} Organizations</h3>
-<p>{{ site.org_desc }}</p>
+<h3>Example API Getting Started Pages</h3>
+<p>These are some of the getting started pages for APIs that I track on in the space.</p>
 
 <center>
 <table width="85%" border="0" cellpadding="3" cellspacing="2">
